--- a/TimeSheetManagementProject/pom.xml
+++ b/TimeSheetManagementProject/pom.xml
@@ -5,9 +5,25 @@
 	<groupId>com.wcsm8org</groupId>
 	<artifactId>TimeSheetManagementProject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M5</version>
+
+					<configuration>
+						<suiteXmlFiles>
+							<suiteXmlFile>testngValidLogin.xml</suiteXmlFile>
+						</suiteXmlFiles>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 	<dependencies>
-
-
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
@@ -19,8 +35,6 @@
 			<version>7.8.0</version>
 			<scope>test</scope>
 		</dependency>
-
-
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
